test/typecheck/bad-callindirect-func-type-mismatch.txt
;;; ERROR: 1
(module
  (table anyfunc (elem 0))
  (type $t (func))
  (func 
    f32.const 0
    call_indirect $t))
(;; STDERR ;;;
out/test/typecheck/bad-callindirect-func-type-mismatch.txt:7:5: error: type mismatch in call_indirect, expected i32 but got f32.
    call_indirect $t))
    ^^^^^^^^^^^^^^^^
;;; STDERR ;;)
